src/modules/base/primitiveCombobox/primitiveCombobox.css
/**
 * BSD 3-Clause License
 *
 * Copyright (c) 2021, Avonni Labs, Inc.
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *
 * - Redistributions of source code must retain the above copyright notice, this
 *   list of conditions and the following disclaimer.
 *
 * - Redistributions in binary form must reproduce the above copyright notice,
 *   this list of conditions and the following disclaimer in the documentation
 *   and/or other materials provided with the distribution.
 *
 * - Neither the name of the copyright holder nor the names of its
 *   contributors may be used to endorse or promote products derived from
 *   this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 * DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
 * FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
 * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
 * SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
 * CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 * OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

.avonni-primitive-combobox__input-has-icon_left-right input {
    padding-left: var(--lwc-spacingXLarge, 2rem);
}

.avonni-primitive-combobox__dropdown {
    box-sizing: content-box;
}

input.avonni-primitive-combobox__input {
    border-color: var(--avonni-combobox-input-color-border, #dddbda);
    border-style: var(--avonni-combobox-input-styling-border, solid);
    border-top-right-radius: var(
        --avonni-combobox-input-radius-border-top-right,
        0.25rem
    );
    border-top-left-radius: var(
        --avonni-combobox-input-radius-border-top-left,
        0.25rem
    );
    border-bottom-right-radius: var(
        --avonni-combobox-input-radius-border-bottom-right,
        0.25rem
    );
    border-bottom-left-radius: var(
        --avonni-combobox-input-radius-border-bottom-left,
        0.25rem
    );
    border-top-width: var(--avonni-combobox-input-sizing-border-top, 1px);
    border-bottom-width: var(--avonni-combobox-input-sizing-border-bottom, 1px);
    border-right-width: var(--avonni-combobox-input-sizing-border-right, 1px);
    border-left-width: var(--avonni-combobox-input-sizing-border-left, 1px);
}

.avonni-primitive-combobox__action,
.avonni-primitive-combobox__action.avonni-primitive-combobox__action_disabled {
    background: var(--avonni-combobox-action-color-background, transparent);
}

.avonni-primitive-combobox__action_fixed {
    position: absolute;
    left: 0;
    right: 0;
    z-index: 1;
    background-color: var(--avonni-combobox-action-color-background, #ffffff);
}

.avonni-primitive-combobox__action:not(.avonni-primitive-combobox__action_disabled):hover,
.avonni-primitive-combobox__action.avonni-primitive-combobox__option_focused {
    background: var(--avonni-combobox-action-color-background-hover, #f3f2f2);
}

.avonni-primitive-combobox__action_disabled,
.avonni-primitive-combobox__action_disabled lightning-icon {
    color: #dddbda;
}

